@@ -1,3 +1,20 @@
+module Gecode
+  module IntEnumMethods
+    attr :distinct_offsets
+  
+    # Specified offsets to be used with a distinct constraint. The offsets can
+    # be specified one by one or as an array of offsets.
+    def with_offsets(*offsets)
+      if offsets.kind_of? Enumerable
+        @distinct_offsets = *offsets
+      else
+        @distinct_offsets = offsets
+      end
+      return self
+    end
+  end
+end
+
 module Gecode::Constraints::IntEnum
   class Expression
     # Posts a distinct constraint on the variables in the enum.
@@ -10,11 +27,10 @@ module Gecode::Constraints::IntEnum
       end
 
       strength, reif = Gecode::Constraints::OptionUtil.decode_options(options)
-      if reif.nil?
-        Gecode::Raw::distinct(@space, @var_array, strength)
-      else
-        Gecode::Raw::distinct(@space, @var_array, strength, reif)
-      end
+      params = [@space, @var_array.distinct_offsets, 
+        @var_array.to_int_var_array, strength, reif]
+      params.delete_if{ |x| x.nil? }
+      Gecode::Raw::distinct(*params)
     end
   end
 end
