@@ -2,15 +2,14 @@ module Gecode
   module IntEnumMethods
     # Specifies that a constraint must hold for the integer variable enum.
     def must
-      Constraints::IntEnum::Expression.new(active_space, to_int_var_array)
+      Constraints::IntEnum::Expression.new(active_space, self)
     end
     alias_method :must_be, :must
     
     # Specifies that the negation of a constraint must hold for the integer 
     # variable.
     def must_not
-      Constraints::IntEnum::Expression.new(active_space, to_int_var_array, 
-        true)
+      Constraints::IntEnum::Expression.new(active_space, self, true)
     end
     alias_method :must_not_be, :must_not
   end
@@ -22,7 +21,7 @@ module Gecode
     # variables followed by must or must_not.
     class Expression
       # Constructs a new expression with the specified space and int var array 
-      # with the (bound) variables as source. The expression can optionally be 
+      # with the (free) variables as source. The expression can optionally be 
       # negated.
       def initialize(space, var_array, negate = false)
         @space = space
